--- a/web/src/components/hostdashboard/Loading.css
+++ b/web/src/components/hostdashboard/Loading.css
@@ -1,20 +1,19 @@
-/* Loading.css */
 .loading-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Full height to center the loader */
+    height: 100vh;
 }
 
 .loader {
-    border: 8px solid #f3f3f3; /* Light grey */
-    border-top: 8px solid #3498db; /* Blue */
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
     border-radius: 50%;
     width: 50px;
     height: 50px;
     animation: spin 2s linear infinite;
-    margin-bottom: 20px; /* Space between loader and text */
+    margin-bottom: 20px;
 }
 
 @keyframes spin {
