--- a/web/src/components/ninedots/ninedots.css
+++ b/web/src/components/ninedots/ninedots.css
@@ -19,8 +19,54 @@
 
 .boxColumn {
     width: 24%;
-    height: 600px;
+    height: 10vh;
     margin: auto;
+}
+
+.travelContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 85%;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    padding-top: 5vw;
+    padding-bottom: 5vw;
+}
+
+.travelItem {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+.headerTwo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.headerTwoText, h2 {
+    width: 70%;
+    text-align: left;
+}
+
+.headerTwo img {
+    width: 35%;
+    height: auto;
+    margin-right: 15vw;
+}
+
+.TextTravelh2{
+    margin-right: 55vw;
+}
+
+.TextTravel {
+    width: 25vw;
+    font-size: smaller;
+    margin-left: 10vw;
+    padding: 1vw;
 }
 
 .imageContainer {
