--- a/web/src/components/landingpage/landing.module.css
+++ b/web/src/components/landingpage/landing.module.css
@@ -17,10 +17,34 @@
     margin: auto;
 }
 
+.iconsContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2% 5%;
+    background-color: #f9f9f9;
+    flex-wrap: nowrap;
+    gap: 20px;
+}
+
+.iconsContainerText {
+    font-size: 1.5rem;
+    font-weight: bold;
+    flex-direction: row;
+    justify-content: center;
+    display: flex;
+    gap: 20px;
+    margin-left: 10rem;
+}
+
+
+
 .pages {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    text-align: center;
     margin-bottom: 20px;
 }
 
@@ -118,12 +142,16 @@
     border-radius: 5px;
     box-shadow: none;
     padding: 10px;
-    margin: 0 10px;
+    margin-top: 15px;
     border: none;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1rem;
+}
+
+.headerTwoText{
+    width: 100%;
 }
 
 .nextButtons:hover {
