Functions for minimumStay, minimumBookingPeriod and maximumStay are in the HostCalendar tab instead of in the enlist page

--- a/web/src/components/hostdashboard/HostCalendar.module.css
+++ b/web/src/components/hostdashboard/HostCalendar.module.css
@@ -49,4 +49,11 @@
         margin: 1em 0;
         gap: 1rem;
     }
+    .spinnerLoader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+    }
 }
