Fixed Selected date ranges box extending when more than 6 dates have been selected

--- a/web/src/components/hostdashboard/Calendar.module.css
+++ b/web/src/components/hostdashboard/Calendar.module.css
@@ -163,6 +163,7 @@
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
+    max-height: 20rem;
 
     header {
         display: flex;
