--- a/web/src/components/hostchatbot/hostchatbot.css
+++ b/web/src/components/hostchatbot/hostchatbot.css
@@ -232,6 +232,13 @@
   font-size: 14px;
 }
 
+.pdf-input-disabled {
+  background-color: #f5f5f5;
+  color: #9e9e9e;
+  cursor: not-allowed;
+}
+
+
 .slick-dots li button:before {
   color: #0078d7;
 }
