--- a/web/src/components/ninedots/ninedots.css
+++ b/web/src/components/ninedots/ninedots.css
@@ -1,108 +1,92 @@
-.imageContainer h1, .imageContainer h3 {
-    font-size: clamp(1.5rem, 3vw + 1rem, 4rem);
-}
-
-.imageContainer, .boxContainer {
+.image-container {
     width: 70%;
-    margin: auto;
-    margin-top: 20px;
-}
-
-.boxRow {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: 50px;
-    margin-bottom: 30px;
-}
-
-.boxColumn {
-    width: 24%;
-    height: 10vh;
-    margin: auto;
-}
-
-.travelContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 85%;
-    margin-left: 10vw;
-    margin-right: 10vw;
-    padding-top: 5vw;
-    padding-bottom: 5vw;
-}
-
-.travelItem {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-}
-
-.headerTwo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.headerTwo .headerTwoText, 
-.headerTwo h2 {
-    width: 70%;
-}
-
-.headerTwo img {
-    width: 35%;
-    height: auto;
-    margin-right: 15vw;
-}
-
-.TextTravelh2 {
-    margin-right: 55vw;
-}
-
-.TextTravel {
-    width: 25vw;
-    font-size: smaller;
-    margin-left: 10vw;
-    padding: 1vw;
-}
-
-.imageContainer {
+    margin: 20px auto;
     border-radius: 30px;
     height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
-.title, .subTitle {
+.image-container h1, 
+.image-container h3 {
     color: white;
     text-shadow: 1px 1px 2px black;
     text-align: center;
 }
 
-.titleHolder {
+.image-container h1 {
+    font-size: clamp(1.5rem, 3vw + 1rem, 4rem);
+}
+
+.image-container h3 {
+    font-size: clamp(1rem, 2vw + 0.5rem, 2rem);
+}
+
+.header-two {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
-    margin-bottom: 15px;
-    flex-wrap: wrap;
+    width: 100%;
+    padding: 0 10vw;
+    gap: 15%;
 }
 
-.boxTitle {
-    margin-left: 10px;
+.header-text {
+    width: 35%;
 }
 
-.box {
-    max-height: 550px;
-    height: 100%;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border-radius: 10px;
+.header-text h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.header-text p {
+    font-size: 1rem;
+    line-height: 1.6;
+}
+
+.travel-image {
+    width: 30%;
+    height: auto;
+    margin-left: 5%;
+}
+
+.travel-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    width: 80%;
+    margin: 5vw auto;
+}
+
+.travel-item {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.travel-subtitle {
+    text-align: left;
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+}
+
+.travel-item p {
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.text-description {
+    font-size: 1rem;
+}
+
+.text-h2 {
+    font-size: 2rem;
+    margin-bottom: 12px;
+    text-align: left;
 }
