--- a/web/src/components/home/Accommodations.css
+++ b/web/src/components/home/Accommodations.css
@@ -210,10 +210,9 @@
   transition: opacity 0.5s ease-in-out;
 }
 
-.swiper-button-next, .swiper-button-prev {
-  z-index: 30 !important;
-  opacity: 1 !important;
-  cursor: pointer !important;
+.swiper-button-next, .swiper-button-prev,.swiper-button-prev-swiper-button-disabled {
+  z-index: 30;
+  cursor: pointer;
   color: #333;
   pointer-events: auto;
   padding: 5px;
@@ -221,25 +220,24 @@
   height: 20px;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 50%;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-  color: #333;
-  opacity: 1;
-  cursor: pointer !important;
-  z-index: 20 !important;
   font-size: 10px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.swiper:hover .swiper-button-next,
+.swiper:hover .swiper-button-prev {
+  opacity: 1;
 }
 
 .swiper-button-next:hover, .swiper-button-prev:hover {
   background: rgba(255, 255, 255, 1);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   transform: scale(1.1);
-  transition: all 0.3s ease;
-  z-index: 20 !important;
 }
-
 .swiper-button-next::after, .swiper-button-prev::after {
   color: #000;
   font-size: 10px !important;
-  z-index: 20 !important;
 }
 
 .swiper-pagination-bullet {
