FIx searchbar responsiveness
Searchbar has responsiveness of mobile and pc BUT the header not and some things still have to be done to be responsive

--- a/web/src/components/home/homePage.css
+++ b/web/src/components/home/homePage.css
@@ -116,6 +116,9 @@ body.hide-header .app-header {
 
 .domits-searchbarCon {
   padding-top: 4vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .domits-subHead {
@@ -422,7 +425,7 @@ body.hide-header .app-header {
   }
 
   .domits-searchText {
-    font-size: 1.5em;
+    font-size: 1em;
   }
 
   .domits-accocard-title {
