--- a/web/src/components/home/components/HomeSearchBar.css
+++ b/web/src/components/home/components/HomeSearchBar.css
@@ -1,59 +1,23 @@
+/* Main search bar styles for all devices */
 .my-searchbar {
+  width: 100%;
+  padding: 0.8rem;
   background-color: white;
-  width: 42.5rem;
-  margin: auto;
-  box-shadow: 0 0 5px hsl(0 0% 78%);
+  box-shadow: 0 0 5px hsl(0, 0%, 78%);
   border-radius: 1.875rem;
   border: solid 1px #7171716a;
   display: flex;
   height: 3.43rem;
   box-sizing: border-box;
+  position: relative;
+  gap: 0.5rem;
+  align-items: center;
 }
 
 .my-searchbar .my-searchbar-search-input-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-top: 0.3125rem;
-}
-
-.my-searchbar-suggestions-container {
-  position: relative;
-  z-index: 1;
-}
-
-.css-qbdosj-Input {
-  margin: 0 !important;
-}
-
-.autocomplete-container input::placeholder {
-  text-align: center;
-}
-
-.searchTitle {
-  color: var(--primary-color);
-  font-size: 1rem;
-  font-family: 'Kanit', sans-serif;
-  font-weight: 500;
-  text-overflow: ellipsis;
-  transform: translateY(-15%);
-}
-
-.my-searchbar-check-in {
-  width: 17%;
-  cursor: auto;
-}
-
-.my-searchbar-location {
-  width: 34%;
-}
-
-.input-calendar {
-  background: none;
-  border: none;
-  text-align: center;
-  width: 92%;
-  height: 3.5rem;
+  align-items: left;
 }
 
 .my-searchbar > div {
@@ -66,7 +30,7 @@
   content: "";
   left: -1.85%;
   top: 50%;
-  transform: translateY(-40%);
+  transform: translateY(-50%);
   width: 0.05rem;
   height: 60%;
   background: rgb(88, 153, 22);
@@ -76,116 +40,24 @@
   background: transparent;
 }
 
-.my-searchbar > div:nth-of-type(3)::before {
-  transform: translateY(-40%);
-  left: -0.01%;
-}
-
-.my-searchbar > div:nth-of-type(4)::before {
-  background: solid;
-  height: 56%;
-  transform: translateY(-40%);
-}
-
-.DatePicker__calendarContainer {
-  position: absolute;
-  top: calc(-20% + 0.4rem);
-  left: 60%;
-  transform: translateX(-50%);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-  border-radius: 0.5rem;
-}
-
 .my-searchbar-button {
-  display: inline-block;
-  outline: 0;
-  cursor: pointer;
-  padding: 3px;
-  font-size: 0.6rem;
-  line-height: 1.875rem;
+  background-color: var(--primary-color);
   border: 1px solid var(--primary-color);
   border-radius: 50%;
-  color: #ffffff;
-  background-color: var(--primary-color);
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
-  height: 2.5rem;
-  width: 2.5rem;
-  margin-top: 0.45rem;
-  margin-left: 0.4rem;
-}
-.my-searchbar-button:hover {
-  opacity: 90%;
-  transition-duration: 0.0s;
-}
-
-
-.my-searchbar-button svg {
-  color: rgb(255, 255, 255);
-  margin-top: 0.625rem;
-  margin-left: 0.2rem;
-}
-
-.search-text {
-  font-size: 1rem;
-  margin-right: 1rem;
-}
-
-.searchBar_inputfield {
-  background: none;
-  border: none;
-  text-align: left;
-  transform: translateY(10%);
-  width: 90%;
-  height: 2rem;
-  margin-left: 1rem;
-}
-
-.searchBar_inputfield[type="search"]::-webkit-search-cancel-button {
-  position: relative;
-  color: black;
-  font-size: large;
-  filter: grayscale(100%);
-}
-
-.searchBar_inputfield:focus {
-  outline: none;
-}
-
-.searchBar_inputfield::placeholder {
-  color: var(--primary-color);
-  font-family: 'Kanit', sans-serif;
-  font-weight: 500;
-  font-size: 1rem;
-  margin: auto;
-}
-
-.my-searchbar-button-section {
-  border: none;
+  color: #fff;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
-  padding: 1.625rem;
-  border-radius: 1.25rem;
-  width: 13.2%;
+  font-size: 0.6rem;
+  height: 2.5rem; 
+  width: 3.5rem;  
+  margin-left: 0.4rem;
+  outline: 0;
+  padding: 0; 
 }
 
-.my-searchbar-error-message {
-  background-color: #f8d7da;
-  color: #721c24;
-  border: 2px solid #f5c6cb;
-  padding: 24px 36px;
-  border-radius: 16px;
-  font-size: 1.2rem;
-  position: absolute;
-  z-index: 1;
-  height: auto;
-  cursor: pointer;
-  transform: translate(60%, 80%);
-  max-width: 400px;
-  text-align: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
 
 .my-searchbar-guest-dropdown {
   display: none;
@@ -203,79 +75,481 @@
   box-sizing: border-box;
   cursor: auto;
 }
-
-.my-searchbar-guest-dropdown.active {
+.my-searchbar-guest-dropdown.active{
   display: block;
   opacity: 1;
   transform: translateX(-50%) scale(1);
 }
 
-.hidden {
-  transform: translateX(-50%) translateY(-100%);
-  opacity: 0;
-  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+.my-input-calendar{
+  background: none;
+  border: none;
+  text-align: center;
+  width: 92%;
+  height: 3.5rem;
 }
 
+.my-button-section{
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 1.625rem;
+  border-radius: 1.25rem;
+  width: 24.2%;
+}
+
+.my-searchbar-error-message{
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 2px solid #f5c6cb;
+  padding: 24px 36px;
+  border-radius: 16px;
+  font-size: 1.2rem;
+  position: absolute;
+  z-index: 1;
+  height: auto;
+  cursor: pointer;
+  transform: translate(60%, 80%);
+  max-width: 400px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.my-searchTitleGuest {
+  position: absolute;
+  color: var(--primary-color);
+  font-size: 1rem;
+  font-weight: 500;
+  padding-top: 0.3rem;
+}
+
+.my-searchbar-button:hover {
+  opacity: 90%;
+}
+
+.my-searchbar_inputfield {
+  background: none;
+  border: none;
+  height: 1rem;
+  margin-left: 1rem;
+  text-align: left;
+  transform: translateY(10%);
+  width: auto;
+}
+
+.Search-check-in {
+  width: 17%;
+  cursor: auto;
+}
+
+.my-searchbar_inputfield::placeholder {
+  color: var(--primary-color);
+  font-family: 'Kanit', sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.my-searchbar_inputfield:focus {
+  outline: none;
+}
+.my-Search-guestP {
+  text-align: left;
+  font-weight: 500;
+  color: #000;
+  font-size: 0.75rem;
+  margin-top: 1rem;
+}
+/* DatePicker */
+.DatePicker {
+  position: relative;
+  display: inline-block;
+  z-index: 100;
+  height: 0.1%;
+}
+
+.DatePicker__input {
+  position: relative;
+  background: transparent;
+  font-size: 12px;
+  border: 1px solid transparent;
+  outline: none;
+  width: 80%;
+  text-align: center;
+  transform: translateY(-3.77rem);
+  padding-bottom: 1rem;
+  color: transparent;
+  cursor: pointer;
+  height: 2.3rem;
+}
+
+.DatePicker__input::placeholder {
+  color: transparent;
+}
+
+@media (max-width: 768px) {
+  .my-Search-close-guest-dropdown {
+    width: calc(120% - 1.875rem);
+    left: 50%;
+    right: 50%;
+    top: -275%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .my-searchbar{
+    width: 95%;
+  }
+}
+
+@media (min-width: 2500px) {
+  .responsives-calendar {
+    font-size: 1rem !important;
+  }
+}
+
+@media (max-width: 1500px) {
+  .responsives-calendar {
+    font-size: 0.9rem !important;
+  }
+}
+
+@media (max-width: 1200px) {
+  .responsives-calendar {
+    font-size: 0.7rem !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .responsives-calendar {
+    font-size: 0.7rem !important;
+  }
+}
+
+@media (max-width: 1500px) {
+
+  .Calendar__monthSelectorItemText,
+  .Calendar__yearSelectorText {
+    font-size: 8px !important;
+  }
+}
+
+@media (max-width: 1200px) {
+
+  .Calendar__monthSelectorItemText,
+  .Calendar__yearSelectorText {
+    font-size: 7px !important;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .Calendar__monthSelectorItemText,
+  .Calendar__yearSelectorText {
+    font-size: 1rem !important;
+  }
+}
+
+@media (min-width: 2500px) {
+
+  .Calendar__monthSelectorItemText,
+  .Calendar__yearSelectorText {
+    font-size: 12px !important;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .my-input-calendar
+  .DatePicker__input {
+    font-size: 0.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .my-searchbar {
+    border: 2px solid var(--primary-color);
+    width: 105%;
+    max-width: 400px;
+    transform: translateX(-0.9rem);
+    margin: auto;
+    box-shadow: 0 0 5px hsl(0 0% 68%);
+    border-radius: 0.875rem;
+    display: flex;
+    font-size: 0.6rem;
+    flex-direction: column;
+    align-items: flex-start;
+    height: auto;
+    padding: 0.6rem;
+    box-sizing: border-box;
+  }
+}
+
+@media (max-width: 768px) {
+  .my-button-section,
+  .my-searchbar-search-input-container,
+  .my-check-in {
+    background-color: #f0f0f0;
+    border-radius: 0.8rem;
+    width: 100%;
+    margin-bottom: 0.4rem;
+  }
+
+  .my-check-in {
+    height: 3.4rem;
+  }
+
+  .my-searchbar-location{
+    background-color: #f0f0f0;
+    border-radius: 0.8rem;
+    width: 100%;
+    margin-bottom: 0.4rem;
+    height: 3rem;
+    text-overflow: ellipsis;
+  }
+
+  .my-searchbar_inputfield {
+    position: relative;
+    background: none;
+    border: none;
+    text-align: center;
+    width: 95%;
+    height: 2.5rem;
+    transform: translateY(10%);
+    text-overflow: ellipsis;
+    margin: auto;
+  }
+  /* kan problemen veroorzaken bij mobile-view */
+  .my-searchbar_inputfield::placeholder {
+    transform: translateX(2.5%)
+  }
+
+  .my-searchbar_inputfield * {
+    margin: auto;
+  }
+
+  .my-button-section{
+    background-color: #f0f0f0;
+    border-radius: 0.8rem;
+    width: 100%;
+    padding: 0rem;
+    border: none;
+    height: 3rem;
+  }
+
+  .my-searchbar-search-input-container {
+    height: 2.8rem;
+  }
+  .my-searchTitleGuest  {
+    transform: translateX(-0%);
+    transform: translateY(-15%);
+    text-align: center;
+    text-overflow: ellipsis;
+  }
+  .my-Search-guestP {
+    position: absolute;
+  }
+  .my-input-calendar{
+    border: none;
+    text-align: center;
+    width: 100%;
+    transform: translate(0%);
+    height: 3.5rem;
+  }
+  /* tijdelijke oplossing het is nog niet responsive */
+  .DatePicker__input {
+    border: solid transparent;
+    transform: translateX(-0%) translateY(-130%);
+    width: 60vw;
+    max-width: 62vw;
+    box-sizing: border-box;
+  }
+  .my-searchbar-button{
+    height: 2.7rem;
+    width: 100%;
+    border-radius: 10px;
+    transform: translateX(-2.25%);
+    margin-top: 0.5rem;
+  }
+  .my-searchbar >div::before {
+    background: transparent;
+  }
+  .DatePicker__calendarContainer {
+    position: absolute;
+    top: calc(-20% + -15.7rem);
+    left: 48%;
+    transform: translateX(-50%);
+  }
+  .DatePicker__calendarArrow {
+    border-color: transparent;
+  }
+  .Search-ClearButton {
+    margin-top: 0.5rem;
+  }
+  .my-searchbar-error-message{
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 2px solid #f5c6cb;
+    padding: 12px 24px;
+    border-radius: 8px;
+    font-size: 16px;
+    position: absolute;
+    z-index: 1;
+    height: 3rem;
+    top: 40.6%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 82%;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+
+  .search-icon {
+    margin-right: 12px;
+    transform: translateY(15%);
+  }
+}
+
+.my-search-text {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .my-search-text {
+    display: inline;
+  }
+}
+@media (max-width: 768px) {
+  .my-mobile-search-button {
+    display: block;
+    width: 75vw;
+    padding: 0.8rem;
+    background-color: #ffffff;
+    border: 1px solid #e2e2e4;
+    border-radius: 0.8rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    font-size: 1rem;
+    color: #000;
+    outline: none;
+    text-align: left;
+    font-weight: 400;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: transform 0.3s ease-in-out;
+    margin-bottom: 0.5rem ;
+    text-overflow: ellipsis;
+  }
+
+
+  .my-searchbar {
+    display: none;
+  }
+
+  .my-searchbar-container .my-searchbar {
+    display: block;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .my-mobile-search-button {
+    display: block;
+    width: 90vw;
+    padding: 0.8rem;
+    background-color: #ffffff;
+    border: 1px solid #e2e2e4;
+    border-radius: 0.8rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    font-size: 1rem;
+    color: #000;
+    outline: none;
+    text-align: left;
+    font-weight: 400;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: transform 0.3s ease-in-out;
+    margin-bottom: 0.5rem ;
+    text-overflow: ellipsis;
+  }
+
+  @media screen and (min-width: 768px) {
+    .my-mobile-search-button {
+      width: 45vw;
+    }
+  }
+}
+/* 
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .my-searchbar {
+    width: 100%;
+    margin-right: 35vw;
+  }
+
+  .my-searchbar-location {
+    width: 28%;
+  }
+
+  .DatePicker__input {
+    padding-left: 0%;
+  }
+} */
 .fixed-search-bar {
   position: fixed;
-  left: 50%; 
-  top: 3vh; 
-  transform: translateX(-50%); 
-  width: 42.5rem; 
-  z-index: 9999; 
+  left: 50%;
+  transform: translateX(-50%);
+  width: 95%;
+  z-index: 9999;
+  top: 22vh;
   background-color: none;
 }
 
-@media (max-width: 450px) {
+@media (min-width: 1024px) and (max-width: 1439px) {
   .fixed-search-bar {
-    position: fixed;
-    left: 50%;
-    top: 12vh !important;
-    transform: translateX(-50%);
-    width: 43.5rem;
-    z-index: 9999;
-    background-color: none;
-}
-.my-searchbar{
-  width: 26.5rem;
+      top: 10vh; 
+      width: 60%;
+  }
 }
 
-
-.DatePicker__input {
-  width: 100%;
-}
-
-.Search-button-section, .searchInputContainer, .Search-check-in{
-  background-color: white;
-}
+@media (min-width: 1440px) {
+  .fixed-search-bar {
+      top: 3vh;
+      padding-left: 45vw;
+  }
 }
 
 @media (max-width: 768px) {
   .fixed-search-bar {
-    position: fixed;
-    left: 50%;
-    top: 10vh;
-    transform: translateX(-50%);
-    width: 43.5rem;
-    z-index: 9999;
-    background-color: none;
-}
-
-.DatePicker__input {
-  width: 100%;
-}
-
-.Search-button-section, .searchInputContainer, .Search-check-in{
-  background-color: white;
-}
-}
-
-
-
-
-@media (max-width: 375px) {
-  .my-searchbar{
-    width: 22.5rem;
+      top: 22vh;
   }
 }
 
+@media (max-width: 425px) {
+  .fixed-search-bar {
+      top: 22vh;
+  }
+}
+
+@media (min-width: 1024px) {
+  .my-searchbar {
+      width: 100%; 
+      height: 3.43rem; 
+  }
+}
+
+@media (min-width: 1440px) {
+  .my-searchbar {
+      width: 42.5rem;
+  }
+
+  .my-searchbar-button {
+    width: 5.5rem;  
+  }
+
+  .my-button-section{
+    width: 26.2%;
+  }
+}
+/* *{
+  border: 1px solid red;
+} */
